SwarmyMcQLearny.ipynb: complete notebook

--- a/notebooks/SwarmyMcQLearny.ipynb
+++ b/notebooks/SwarmyMcQLearny.ipynb
@@ -8,6 +8,26 @@
    "source": [
     "!git clone https://github.com/LuisFMCuriel/SwarmyMcQLearny.git"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this to use tensorflow\n",
+    "!python /content/SwarmyMcQLearny/tensorflow/main.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this to use pytorch\n",
+    "!python /content/SwarmyMcQLearny/pytorch/main.py"
+   ]
   }
  ],
  "metadata": {
