notebook change to add parameters in the main script

--- a/notebooks/SwarmyMcQLearny.ipynb
+++ b/notebooks/SwarmyMcQLearny.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# Run this to use tensorflow\n",
-    "!python /content/SwarmyMcQLearny/tensorflow/main.py"
+    "!python /content/SwarmyMcQLearny/tensorflow/main.py --gamma 1 --env_name 'CartPole-v1' --max_episodes 500"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# Run this to use pytorch\n",
-    "!python /content/SwarmyMcQLearny/pytorch/main.py"
+    "!python /content/SwarmyMcQLearny/pytorch/main.py --gamma 1 --env_name 'CartPole-v1' --max_episodes 500"
    ]
   }
  ],
